--- a/UI/ColorVision.UI/Properties/Resources.ko.resx
+++ b/UI/ColorVision.UI/Properties/Resources.ko.resx
@@ -1,6 +1,5 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8"?>
 <root xmlns:ns1="urn:schemas-microsoft-com:xml-msdata" xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  
   <xs:schema id="root">
     <xs:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xs:element name="root" ns1:IsDataSet="true">
@@ -254,4 +253,205 @@
   <data name="Options" xml:space="preserve">
     <value>옵션</value>
   </data>
-<data name="NoLocalLog4Output" xml:space="preserve"><value>로컬 log4 출력이 구성되지 않았습니다</value></data><data name="UpdateLog4NetLevel" xml:space="preserve"><value>Log4Net 로그 수준 업데이트 중: </value></data><data name="ViewMode1" xml:space="preserve"><value>보기 모드 1</value></data><data name="ViewMode2" xml:space="preserve"><value>보기 모드 2</value></data><data name="ViewMode4" xml:space="preserve"><value>보기 모드 4</value></data><data name="ViewMode9" xml:space="preserve"><value>보기 모드 9</value></data><data name="CheckPluginUpdates" xml:space="preserve"><value>플러그인 업데이트 확인</value></data><data name="CheckingForAdditionalProjects" xml:space="preserve"><value>추가 프로젝트 확인 중</value></data><data name="Download" xml:space="preserve"><value>다운로드</value></data><data name="ProjectNotFound" xml:space="preserve"><value>프로젝트 {0}을(를) 찾을 수 없습니다</value></data><data name="FoundProjectDownloadConfirm" xml:space="preserve"><value>프로젝트 {0}, {1}을(를) 찾았습니다. 다운로드하시겠습니까?</value></data><data name="AllFiles" xml:space="preserve"><value>모든 파일 (*.*)|*.*</value></data><data name="UnsupportedFileFormat" xml:space="preserve"><value>지원되지 않는 파일 형식</value></data><data name="SortOptions" xml:space="preserve"><value>정렬 옵션</value></data><data name="SmartSortAscending" xml:space="preserve"><value>스마트 정렬 (오름차순)</value></data><data name="SmartSortDescending" xml:space="preserve"><value>스마트 정렬 (내림차순)</value></data><data name="SortByColumn" xml:space="preserve"><value>{0}(으)로 정렬</value></data><data name="Ascending" xml:space="preserve"><value>오름차순</value></data><data name="Descending" xml:space="preserve"><value>내림차순</value></data><data name="ConfirmUpdate" xml:space="preserve"><value>업데이트</value></data><data name="ConfirmDeletePlugin" xml:space="preserve"><value>플러그인 {0}을(를) 삭제하시겠습니까?</value></data><data name="EnableCUDA" xml:space="preserve"><value>CUDA 활성화</value></data><data name="CheckingCUDASupport" xml:space="preserve"><value>CUDA 지원 확인 중</value></data><data name="ConfigurationParameters" xml:space="preserve"><value>구성 매개변수</value></data><data name="EnableScheduledBackup" xml:space="preserve"><value>예약된 백업 활성화</value></data><data name="MaxBackupCount" xml:space="preserve"><value>최대 백업 수</value></data><data name="AutoCleanOldBackups" xml:space="preserve"><value>초과 시 이전 백업 자동 정리</value></data><data name="ConfigFileResetDueToError" xml:space="preserve"><value>구성 파일 오류, 재설정되었습니다</value></data><data name="ConfigFileRestored" xml:space="preserve"><value>최근 백업에서 구성 파일을 복원했습니다</value></data><data name="RestoreConfigFileFailed" xml:space="preserve"><value>구성 파일 복원 실패</value></data><data name="BackupConfigFileFailed" xml:space="preserve"><value>구성 파일 백업 실패</value></data><data name="CleanupBackupFailed" xml:space="preserve"><value>백업 파일 정리 실패</value></data><data name="SaveSingleConfigFailed" xml:space="preserve"><value>단일 구성 {0} 저장 실패</value></data><data name="WriteConfigFileFailed" xml:space="preserve"><value>구성 파일 {0} 쓰기 실패</value></data><data name="Execute" xml:space="preserve"><value>실행</value></data><data name="OpenContainingFolder" xml:space="preserve"><value>포함 폴더 열기</value></data><data name="OpenFolder" xml:space="preserve"><value>폴더 열기</value></data><data name="OnlineCronGenerator" xml:space="preserve"><value>온라인 Cron 표현식 생성기</value></data><data name="PluginMissingId" xml:space="preserve"><value>플러그인 {0}에 고유 ID가 없습니다. 건너뛰었습니다</value></data><data name="DependencyDllNotFound" xml:space="preserve"><value>종속성 {0} DLL을 찾을 수 없습니다: {1}</value></data><data name="DependencyVersionInsufficient" xml:space="preserve"><value>종속성 {0} 버전이 부족합니다. 필요: {1}, 실제: {2}</value></data><data name="DependencyCheckException" xml:space="preserve"><value>종속성 {0} 버전 확인 중 예외 발생: {1}</value></data><data name="LoadingPlugin" xml:space="preserve"><value>플러그인 로드 중: {0}</value></data><data name="PluginDllNotFound" xml:space="preserve"><value>플러그인 DLL을 찾을 수 없습니다: {0}</value></data><data name="LoadedPluginWithoutManifest" xml:space="preserve"><value>매니페스트 없이 플러그인을 로드했습니다: {0}</value></data><data name="PluginLoadError" xml:space="preserve"><value>플러그인 또는 매니페스트 로드 오류: {0}</value></data><data name="BatchFilePathCannotBeEmpty" xml:space="preserve"><value>batchFilePath는 비워 둘 수 없습니다</value></data><data name="BaseDirCannotBeEmpty" xml:space="preserve"><value>baseDir는 비워 둘 수 없습니다</value></data><data name="ExeNameCannotBeEmpty" xml:space="preserve"><value>exeName은 비워 둘 수 없습니다</value></data><data name="EchoTerminatingProcess" xml:space="preserve"><value>echo 프로세스 종료 중: {0}</value></data><data name="EchoStartCopyingFiles" xml:space="preserve"><value>echo 새 버전 파일 복사 시작...</value></data><data name="RemStagePointsToTemp" xml:space="preserve"><value>rem STAGE는 임시 디렉터리의 ColorVision 콘텐츠 루트를 가리킵니다</value></data><data name="EchoBackingUpCurrentVersion" xml:space="preserve"><value>echo 현재 버전 백업 중...</value></data><data name="EchoTargetDirNotExist" xml:space="preserve"><value>  echo 대상 디렉터리가 존재하지 않습니다. 백업을 건너뜁니다.</value></data><data name="EchoBackupTo" xml:space="preserve"><value>  echo 백업 위치: %BKDIR%</value></data><data name="EchoBackupComplete" xml:space="preserve"><value>  echo 백업 완료.</value></data><data name="RemRobocopySuccess" xml:space="preserve"><value>  rem Robocopy 0-7은 성공으로 간주됩니다</value></data><data name="EchoRobocopyFailed" xml:space="preserve"><value>     echo Robocopy 실패, 오류 코드 !RC!, XCOPY 대체 시도 중...</value></data><data name="EchoRobocopyNotFound" xml:space="preserve"><value>  echo Robocopy를 찾을 수 없습니다. XCOPY로 대체...</value></data><data name="EchoUsingXCOPY" xml:space="preserve"><value>echo XCOPY 대체 복사 사용 중...</value></data><data name="EchoXCOPYFailed" xml:space="preserve"><value>  echo XCOPY 복사 실패, 업데이트 중단됨.</value></data><data name="EchoCopyComplete" xml:space="preserve"><value>echo 복사 완료.</value></data><data name="EchoRestartingProgram" xml:space="preserve"><value>echo 프로그램 다시 시작 중...</value></data><data name="EchoSchedulingCleanup" xml:space="preserve"><value>echo 임시 디렉터리 및 스크립트의 지연된 정리 예약 중...</value></data><data name="EchoUpdateComplete" xml:space="preserve"><value>echo 업데이트 완료. (백그라운드에서 정리 실행 중)</value></data><data name="ApplicationCurrentNotInitialized" xml:space="preserve"><value>Application.Current가 초기화되지 않았습니다</value></data><data name="Bool2VisibilityConverterNotFound" xml:space="preserve"><value>bool2VisibilityConverter 리소스를 찾을 수 없습니다</value></data></root>
+  <data name="NoLocalLog4Output" xml:space="preserve">
+    <value>로컬 log4 출력이 구성되지 않았습니다</value>
+  </data>
+  <data name="UpdateLog4NetLevel" xml:space="preserve">
+    <value>Log4Net 로그 수준 업데이트 중:</value>
+  </data>
+  <data name="ViewMode1" xml:space="preserve">
+    <value>보기 모드 1</value>
+  </data>
+  <data name="ViewMode2" xml:space="preserve">
+    <value>보기 모드 2</value>
+  </data>
+  <data name="ViewMode4" xml:space="preserve">
+    <value>보기 모드 4</value>
+  </data>
+  <data name="ViewMode9" xml:space="preserve">
+    <value>보기 모드 9</value>
+  </data>
+  <data name="CheckPluginUpdates" xml:space="preserve">
+    <value>플러그인 업데이트 확인</value>
+  </data>
+  <data name="CheckingForAdditionalProjects" xml:space="preserve">
+    <value>추가 프로젝트 확인 중</value>
+  </data>
+  <data name="Download" xml:space="preserve">
+    <value>다운로드</value>
+  </data>
+  <data name="ProjectNotFound" xml:space="preserve">
+    <value>프로젝트 {0}을(를) 찾을 수 없습니다</value>
+  </data>
+  <data name="FoundProjectDownloadConfirm" xml:space="preserve">
+    <value>프로젝트 {0}, {1}을(를) 찾았습니다. 다운로드하시겠습니까?</value>
+  </data>
+  <data name="AllFiles" xml:space="preserve">
+    <value>모든 파일 (*.*)|*.*</value>
+  </data>
+  <data name="UnsupportedFileFormat" xml:space="preserve">
+    <value>지원되지 않는 파일 형식</value>
+  </data>
+  <data name="SortOptions" xml:space="preserve">
+    <value>정렬 옵션</value>
+  </data>
+  <data name="SmartSortAscending" xml:space="preserve">
+    <value>스마트 정렬 (오름차순)</value>
+  </data>
+  <data name="SmartSortDescending" xml:space="preserve">
+    <value>스마트 정렬 (내림차순)</value>
+  </data>
+  <data name="SortByColumn" xml:space="preserve">
+    <value>{0}(으)로 정렬</value>
+  </data>
+  <data name="Ascending" xml:space="preserve">
+    <value>오름차순</value>
+  </data>
+  <data name="Descending" xml:space="preserve">
+    <value>내림차순</value>
+  </data>
+  <data name="ConfirmUpdate" xml:space="preserve">
+    <value>업데이트</value>
+  </data>
+  <data name="ConfirmDeletePlugin" xml:space="preserve">
+    <value>플러그인 {0}을(를) 삭제하시겠습니까?</value>
+  </data>
+  <data name="EnableCUDA" xml:space="preserve">
+    <value>CUDA 활성화</value>
+  </data>
+  <data name="CheckingCUDASupport" xml:space="preserve">
+    <value>CUDA 지원 확인 중</value>
+  </data>
+  <data name="ConfigurationParameters" xml:space="preserve">
+    <value>구성 매개변수</value>
+  </data>
+  <data name="EnableScheduledBackup" xml:space="preserve">
+    <value>예약된 백업 활성화</value>
+  </data>
+  <data name="MaxBackupCount" xml:space="preserve">
+    <value>최대 백업 수</value>
+  </data>
+  <data name="AutoCleanOldBackups" xml:space="preserve">
+    <value>초과 시 이전 백업 자동 정리</value>
+  </data>
+  <data name="ConfigFileResetDueToError" xml:space="preserve">
+    <value>구성 파일 오류, 재설정되었습니다</value>
+  </data>
+  <data name="ConfigFileRestored" xml:space="preserve">
+    <value>최근 백업에서 구성 파일을 복원했습니다</value>
+  </data>
+  <data name="RestoreConfigFileFailed" xml:space="preserve">
+    <value>구성 파일 복원 실패</value>
+  </data>
+  <data name="BackupConfigFileFailed" xml:space="preserve">
+    <value>구성 파일 백업 실패</value>
+  </data>
+  <data name="CleanupBackupFailed" xml:space="preserve">
+    <value>백업 파일 정리 실패</value>
+  </data>
+  <data name="SaveSingleConfigFailed" xml:space="preserve">
+    <value>단일 구성 {0} 저장 실패</value>
+  </data>
+  <data name="WriteConfigFileFailed" xml:space="preserve">
+    <value>구성 파일 {0} 쓰기 실패</value>
+  </data>
+  <data name="Execute" xml:space="preserve">
+    <value>실행</value>
+  </data>
+  <data name="OpenContainingFolder" xml:space="preserve">
+    <value>포함 폴더 열기</value>
+  </data>
+  <data name="OpenFolder" xml:space="preserve">
+    <value>폴더 열기</value>
+  </data>
+  <data name="OnlineCronGenerator" xml:space="preserve">
+    <value>온라인 Cron 표현식 생성기</value>
+  </data>
+  <data name="PluginMissingId" xml:space="preserve">
+    <value>플러그인 {0}에 고유 ID가 없습니다. 건너뛰었습니다</value>
+  </data>
+  <data name="DependencyDllNotFound" xml:space="preserve">
+    <value>종속성 {0} DLL을 찾을 수 없습니다: {1}</value>
+  </data>
+  <data name="DependencyVersionInsufficient" xml:space="preserve">
+    <value>종속성 {0} 버전이 부족합니다. 필요: {1}, 실제: {2}</value>
+  </data>
+  <data name="DependencyCheckException" xml:space="preserve">
+    <value>종속성 {0} 버전 확인 중 예외 발생: {1}</value>
+  </data>
+  <data name="LoadingPlugin" xml:space="preserve">
+    <value>플러그인 로드 중: {0}</value>
+  </data>
+  <data name="PluginDllNotFound" xml:space="preserve">
+    <value>플러그인 DLL을 찾을 수 없습니다: {0}</value>
+  </data>
+  <data name="LoadedPluginWithoutManifest" xml:space="preserve">
+    <value>매니페스트 없이 플러그인을 로드했습니다: {0}</value>
+  </data>
+  <data name="PluginLoadError" xml:space="preserve">
+    <value>플러그인 또는 매니페스트 로드 오류: {0}</value>
+  </data>
+  <data name="BatchFilePathCannotBeEmpty" xml:space="preserve">
+    <value>batchFilePath는 비워 둘 수 없습니다</value>
+  </data>
+  <data name="BaseDirCannotBeEmpty" xml:space="preserve">
+    <value>baseDir는 비워 둘 수 없습니다</value>
+  </data>
+  <data name="ExeNameCannotBeEmpty" xml:space="preserve">
+    <value>exeName은 비워 둘 수 없습니다</value>
+  </data>
+  <data name="EchoTerminatingProcess" xml:space="preserve">
+    <value>echo 프로세스 종료 중: {0}</value>
+  </data>
+  <data name="EchoStartCopyingFiles" xml:space="preserve">
+    <value>echo 새 버전 파일 복사 시작...</value>
+  </data>
+  <data name="RemStagePointsToTemp" xml:space="preserve">
+    <value>rem STAGE는 임시 디렉터리의 ColorVision 콘텐츠 루트를 가리킵니다</value>
+  </data>
+  <data name="EchoBackingUpCurrentVersion" xml:space="preserve">
+    <value>echo 현재 버전 백업 중...</value>
+  </data>
+  <data name="EchoTargetDirNotExist" xml:space="preserve">
+    <value>  echo 대상 디렉터리가 존재하지 않습니다. 백업을 건너뜁니다.</value>
+  </data>
+  <data name="EchoBackupTo" xml:space="preserve">
+    <value>  echo 백업 위치: %BKDIR%</value>
+  </data>
+  <data name="EchoBackupComplete" xml:space="preserve">
+    <value>  echo 백업 완료.</value>
+  </data>
+  <data name="RemRobocopySuccess" xml:space="preserve">
+    <value>  rem Robocopy 0-7은 성공으로 간주됩니다</value>
+  </data>
+  <data name="EchoRobocopyFailed" xml:space="preserve">
+    <value>     echo Robocopy 실패, 오류 코드 !RC!, XCOPY 대체 시도 중...</value>
+  </data>
+  <data name="EchoRobocopyNotFound" xml:space="preserve">
+    <value>  echo Robocopy를 찾을 수 없습니다. XCOPY로 대체...</value>
+  </data>
+  <data name="EchoUsingXCOPY" xml:space="preserve">
+    <value>echo XCOPY 대체 복사 사용 중...</value>
+  </data>
+  <data name="EchoXCOPYFailed" xml:space="preserve">
+    <value>  echo XCOPY 복사 실패, 업데이트 중단됨.</value>
+  </data>
+  <data name="EchoCopyComplete" xml:space="preserve">
+    <value>echo 복사 완료.</value>
+  </data>
+  <data name="EchoRestartingProgram" xml:space="preserve">
+    <value>echo 프로그램 다시 시작 중...</value>
+  </data>
+  <data name="EchoSchedulingCleanup" xml:space="preserve">
+    <value>echo 임시 디렉터리 및 스크립트의 지연된 정리 예약 중...</value>
+  </data>
+  <data name="EchoUpdateComplete" xml:space="preserve">
+    <value>echo 업데이트 완료. (백그라운드에서 정리 실행 중)</value>
+  </data>
+  <data name="ApplicationCurrentNotInitialized" xml:space="preserve">
+    <value>Application.Current가 초기화되지 않았습니다</value>
+  </data>
+  <data name="Bool2VisibilityConverterNotFound" xml:space="preserve">
+    <value>bool2VisibilityConverter 리소스를 찾을 수 없습니다</value>
+  </data>
+</root>
