--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -855,4 +855,7 @@
   <data name="Workflow" xml:space="preserve">
     <value>Flux de travail</value>
   </data>
+  <data name="DeviceOffline" xml:space="preserve">
+    <value>Appareil hors ligne</value>
+  </data>
 </root>
