--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -835,4 +835,7 @@
   <data name="Workflow" xml:space="preserve">
     <value>工作流程</value>
   </data>
+  <data name="DeviceOffline" xml:space="preserve">
+    <value>设备离线</value>
+  </data>
 </root>
