--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -855,4 +855,7 @@
   <data name="Workflow" xml:space="preserve">
     <value>Рабочий процесс</value>
   </data>
+  <data name="DeviceOffline" xml:space="preserve">
+    <value>Устройство отключено</value>
+  </data>
 </root>
