--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -855,4 +855,7 @@
   <data name="Workflow" xml:space="preserve">
     <value>工作流程</value>
   </data>
+  <data name="DeviceOffline" xml:space="preserve">
+    <value>裝置離線</value>
+  </data>
 </root>
